test/corpus/expressions.txt
==================
variable
==================

<html>
  {{ variable }}
  {{ variable.item1.item2 }}
  {{ variable|filter }}
  {{ variable|filter:argument }}
  {{ variable|filter:argument.item1.item2 }}
  {{ variable|filter:"quoted argument" }}
  {{ variable|filter:"quoted argument, with non-word characters!" }}
  {{ variable|filter|filter:argument|filter:"quoted argument" }}
</html>

---

(template
  (content)
   (expression
      (variable
        (variable_name)))
    (content)
    (expression
      (variable
        (variable_name)))
    (content)
    (expression
      (variable
        (variable_name)
        (filter
          (filter_name))))
    (content)
    (expression
      (variable
        (variable_name)
        (filter
          (filter_name)
          (filter_argument))))
    (content)
    (expression
      (variable
        (variable_name)
        (filter
          (filter_name)
          (filter_argument))))
    (content)
    (expression
      (variable
        (variable_name)
        (filter
          (filter_name)
          (filter_argument))))
    (content)
    (expression
      (variable
        (variable_name)
        (filter
          (filter_name)
          (filter_argument))))
    (content)
    (expression
      (variable
        (variable_name)
        (filter
          (filter_name))
        (filter
          (filter_name)
          (filter_argument))
        (filter
          (filter_name)
          (filter_argument))))
  (content))
